# Functional-programming

./: README.md
Haskell/: lab02.hs  lab04.hs
Haskell/Exams/: Preparation_Exam.hs  exam01.hs
Haskell/Labs/: lab01.hs  lab03.hs  lab05.hs  lab06.hs  lab07.hs
Labs/: lab05.rkt  lab06.rkt
Scheme/Assoc/: Assoc_Tasks.rkt
Scheme/Exam/: Exam.rkt  Exam_Example.rkt  Exam_Exercise.rkt
Scheme/Labs/: lab03.rkt  lab04.rkt  lab06.rkt
Scheme/Matrixes/: Martixes_tasks.rkt
wordle-project/: CHANGELOG.md  wordle-project.cabal
wordle-project/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
wordle-project/src/: Color.hs  ColorUtils.hs  EasyGame.hs  ExpertGame.hs  GameState.hs  HelperMode.hs  IOOperations.hs  ListUtils.hs  Main.hs  NormalGame.hs
wordleProject/: CHANGELOG.md  README.md  package.yaml  wordle-list.txt  wordleProject.cabal
wordleProject/app/: Main.hs
wordleProject/src/: Color.hs  ColorUtils.hs  EasyGame.hs  ExpertGame.hs  GameState.hs  HelperExpertMode.hs  HelperMode.hs  IOOperations.hs  ListUtils.hs  NormalGame.hs
